[package]
name = "mempool-dumpster"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.30"
csv = "1.2.2"
eyre = "0.6.8"
polars = { version = "0.32.1", features = ["parquet"] }
rayon = "1.7.0"
reqwest = "0.11.20"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.8" }
rlp = "0.5.2"
scraper = "0.17.1"
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
zip = "0.6.6"
