[package]
name = "mempool-dumpster"
version = "0.1.0"
edition = "2021"

[dependencies]
async_zip = { version = "0.0.15", features = ["async-compression", "full"] }
chrono = "0.4.30"
csv = "1.2.2"
csv-async = { version = "1.2.6"}
eyre = "0.6.8"
futures = "0.3.28"
polars = { version = "0.32.1", features = ["parquet"] }
rayon = "1.7.0"
reqwest = { version = "0.11.20", features = ["stream"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.8" }
rlp = "0.5.2"
scraper = "0.17.1"
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ureq = "2.7.1"
zip = "0.6.6"
