[package]
name = "mempool-dumpster"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tool to get histrorical mempool data for Ethereum from mempool-dumpster"
categories = ["command-line-utilities", "blockchain", "ethereum"]
repository = "https://github.com/dvush/mempool-dumpster-rs/"
readme = "README.md"

[dependencies]
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["derive", "env"] }
csv = "1.2.2"
eyre = "0.6.8"
indicatif = "0.17.6"
polars = { version = "0.32.1", features = ["parquet", "lazy"] }
scraper = "0.17.1"
serde = "1.0.188"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ureq = "2.7.1"
zip = "0.6.6"
